Sigil v0.4.0 ß2 2011.03.21.
    - fixed an issue with the ID of the manifest item of a resource not being updated when the 
    resource was renamed
    - fixed an issue with chapter splits being created in the wrong reading order (issue #797)
    - fixed an issue with some HTML files dissapearing after a save/load cycle if chapter splitting
    was performed before the save
    - fixed an issue with renaming a file and then splitting it causing duplicate ID's in the OPF
    manifest (issue #800)
    - fixed a validation issue with the Meta Editor not adding the correct namespace prefix to some
    Dublin Core metadata element attributes

Sigil v0.4.0 ß1 2011.03.20
    - fixed an issue with CSS @import rules in the '@import "something.css"' format not being 
    recognized and thus not updated on import
    - removed the "CustomID" basic metadata entry from the Meta Editor; those wishing to use
    custom ID's can now add them directly to the OPF
    - Sigil now preserves custom unique identifiers in the OPF (issue #552)
    - removed support for the Sigil-proprietary SGF format
    - the user can now edit the OPF file by hand (issue #281) 
    - the user can now edit the NCX file by hand (issue #282)
    - the OPF file is now preserved on import (issue #586)
    - the NCX file is now preserved on import (issue #283)
    - the Table Of Contents editor has been replaced with a new Table of Contents sidebar;
    clicking on an item in this sidebar takes the user to the target location, enabling TOC
    navigation (issue #100)
    - a dialog now informs the user if his XHTML, NCX or OPF documents are not well-formed 
    XML (with error location and description), thus allowing him to fix the potential problems
    by hand instead of leaving them to Tidy to fix (issue #519)
    - fixed a rare issue with no tab opened by default when loading epubs
    - made the sigil.sh startup script more robust (courtesy of Craig Sanders) (issue #737) 

Sigil v0.3.4 2011.01.12.