@@ -1,8 +1,11 @@
+Sigil v0.4.0 ß3 ADD_DATE
+    - fixed a regression that caused the Add Semantics menu to stop working (issue #807)
+
 Sigil v0.4.0 ß2 2011.03.21.
     - fixed an issue with the ID of the manifest item of a resource not being updated when the 
     resource was renamed
     - fixed an issue with chapter splits being created in the wrong reading order (issue #797)
-    - fixed an issue with some HTML files dissapearing after a save/load cycle if chapter splitting
+    - fixed an issue with some HTML files disappearing after a save/load cycle if chapter splitting
     was performed before the save
     - fixed an issue with renaming a file and then splitting it causing duplicate ID's in the OPF
     manifest (issue #800)
